--- a/templates/user/showActions.html.twig
+++ b/templates/user/showActions.html.twig
@@ -53,13 +53,13 @@ edit -> state==-1
     <tr>
 
       <!-- <th scope="row">{{feel.cnt}}</th> -->
-      <th scope="row">feeling</th>
+      <th scope="row">feeding</th>
       <td>{{feel.date}}</td>
       {%if feel.increase%}
-      <td>increase [feel]</td>
+      <td>increase [feed]</td>
      <td>[+] {{feel.increase}}</td>
       {% else %}
-      <td> decrease [feel]</td>
+      <td> decrease [feed]</td>
      <td>[-] {{feel.decrease}}</td>
       {% endif %}
 
