--- a/templates/security/Register-page.html.twig
+++ b/templates/security/Register-page.html.twig
@@ -1,5 +1,5 @@
 <head>
-<title> ggg </title>
+<title> Register </title>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" >
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -113,7 +113,7 @@
                     <div class="col-md-3 register-left">
                         <img src="https://image.ibb.co/n7oTvU/logo_white.png" alt=""/>
                         <h3>Welcome</h3>
-                        <p>You are 30 seconds away from earning your own money!</p>
+                        <p>Timely return of a loan makes it easier to borrow a second time !</p>
                       <a href="{{path('login-page')}}"> <input type="button" name="" value="Login"/></a> <br/>
                     </div>
                     <div class="col-md-9 register-right">
